--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
   },
   "dependencies": {
     "css-loader": "^0.28.9",
+    "highlight.js": "^9.12.0",
     "is-windows": "^1.0.1",
     "iview": "^2.9.1",
     "less-loader": "^4.0.5",
+    "marked": "^0.3.12",
+    "mavon-editor": "^2.4.16",
     "shebang-command": "^1.2.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
