--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "luffy-laravel/repositories": "^1.0",
+        "spatie/laravel-backup": "3.0.0",
         "tymon/jwt-auth": "1.0.0-rc.2"
     },
     "require-dev": {
