--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "is-windows": "^1.0.1",
     "iview": "^2.9.1",
     "less-loader": "^4.0.5",
-    "marked": "^0.3.12",
+    "marked": "^0.3.19",
     "mavon-editor": "^2.4.16",
     "shebang-command": "^1.2.0",
     "vue-router": "^3.0.1",
+    "vue-scroll": "^2.1.7",
     "vuex": "^3.0.1",
     "web-storage-cache": "^1.0.3"
   }
