--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "babel-preset-env": "^1.6.1",
     "bootstrap-sass": "^3.3.7",
     "cross-env": "^5.1",
+    "css-loader": "^0.28.11",
     "jquery": "^3.2",
-    "laravel-mix": "^1.0",
+    "laravel-mix": "^1.7.2",
     "less": "^2.7.3",
     "lodash": "^4.17.4",
-    "vue": "^2.5.7"
+    "style-loader": "^0.20.3",
+    "vue": "^2.5.7",
+    "webpack-cli": "^2.0.13"
   },
   "dependencies": {
     "css-loader": "^0.28.9",
@@ -35,6 +38,7 @@
     "vue-router": "^3.0.1",
     "vue-scroll": "^2.1.7",
     "vuex": "^3.0.1",
-    "web-storage-cache": "^1.0.3"
+    "web-storage-cache": "^1.0.3",
+    "webpack": "^3.11.0"
   }
 }
