--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "laravel-mix": "^1.7.2",
     "less": "^2.7.3",
     "lodash": "^4.17.4",
+    "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "vue": "^2.5.7",
     "webpack-cli": "^2.0.13"
